--- a/public/index.html
+++ b/public/index.html
@@ -175,8 +175,11 @@
 
     <div class="h-screen w-full bg-gradient-to-br from-gray-300 to-gray-600 p-4 md:p-24">
         <div class="text pt-24 pl-12 md:pl-32">
+            <h2 class="title-large">Currently under construction.</h2>
+            <!--
             <p class="title-small">Hi there. I'm</p>
             <h2 class="title-large">Georg Diez</h2>
+            -->
 
         </div>
         <div id="muenster" class="flex flex-row">
